// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 32px;
  font-weight: 400;
  line-height: 32px;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 5px;
}

.S5 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}
</style>

<div
  className="S2"
>
  <div
    className="S4"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      className="S3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </div>
  <div
    className="S5"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</div>
`;

exports[`2. lead one and one slice 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 32px;
  font-weight: 400;
  line-height: 32px;
  margin-bottom: 5px;
}

.S4 {
  margin-bottom: 5px;
}

.S5 {
  margin-bottom: 10px;
}

.S6 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S7 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}

.IS2 {
  color: rgba(29,29,27,1.00);
}
</style>

<div
  className="configweb__Base-kjGEdW cNGWYk configweb__Base-eXHdFh jFKTdO S2"
>
  <div
    className="responsiveweb__SliceContainer-kEikFj fWXWTf S2"
  >
    <div
      className="responsiveweb__Base-kQMzah cxejRh responsiveweb__Base-jXvbcq dmuCnu responsiveweb__Base-dIyxxW eFWEvM S2"
    >
      <div
        className="responsiveweb__Base-iFMijX gmChNY responsiveweb__Base-drDvXX xjUQC responsiveweb__Base-jIurKX hSGlCR S2"
      >
        <div
          className="S2"
        >
          <div
            className="S4"
          >
            <div
              className="S2"
            >
              <div
                className="IS1 S1"
              >
                ROYALS
              </div>
            </div>
            <h3
              aria-level="3"
              className="S3"
              role="heading"
            >
              Prince Philip ‘could be prosecuted’ over car crash
            </h3>
            <ArticleFlags
              flags={
                Array [
                  "NEW",
                ]
              }
            />
          </div>
          <div
            className="S5"
          >
            <Image
              aspectRatio={1.7777777777777777}
              uri="https://img/someImage"
            />
          </div>
        </div>
      </div>
      <div
        className="responsiveweb-fhQnWB dWVMyV S2"
      />
      <div
        className="responsiveweb__SupportsContainer-eXSNWD dpijfw S2"
      >
        <div
          className="responsiveweb-brngwq gvaiUN S2"
        >
          <div
            className="S2"
          >
            <div
              className="S4"
            >
              <div
                className="S2"
              >
                <div
                  className="IS2 S1"
                >
                  CYBER CRIME
                </div>
              </div>
              <h3
                aria-level="3"
                className="S3"
                role="heading"
              >
                GCHQ gives girls free cyber-classes to tackle gender gap
              </h3>
              <ArticleFlags
                flags={
                  Array [
                    "UPDATED",
                  ]
                }
              />
            </div>
            <div
              className="S7"
            >
              <span
                className="S6"
              >
                
                GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
              </span>
              <span
                className="S6"
              >
                 
                The intelligence
                ...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. secondary one slice 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S4 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S5 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.S6 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}
</style>

<div
  className="S2"
>
  <div
    className="S2"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        ROYALS
      </div>
    </div>
    <h3
      aria-level="3"
      className="S3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
    <div
      className="S5"
    >
      <span
        className="S4"
      >
        
        The 
        <span
          className="S4"
        >
          Duke of Edinburgh
        </span>
         could be charged with driving without due care and attention after his car accident yesterday
        ...
      </span>
    </div>
  </div>
  <div
    className="S6"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</div>
`;

exports[`4. secondary four 1`] = `
<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S3 {
  margin-bottom: 0px;
}

.S4 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S5 {
  margin-bottom: 5px;
}

.IS1 {
  color: rgba(0,91,141,1.00);
}

.IS2 {
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  width: 50%;
}

.IS3 {
  border-left-width: 0.25px;
  margin-right: 5px;
  margin-left: 5px;
}

.IS4 {
  color: rgba(0,91,141,1.00);
}

.IS5 {
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  width: 50%;
}

.IS6 {
  border-bottom-width: 0.5px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 5px;
  margin-left: 5px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS7 {
  color: rgba(0,91,141,1.00);
}

.IS8 {
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  width: 50%;
}

.IS9 {
  border-left-width: 0.25px;
  margin-right: 5px;
  margin-left: 5px;
}

.IS10 {
  color: rgba(0,91,141,1.00);
}

.IS11 {
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  width: 50%;
}

.IS12 {
  border-bottom-width: 0.5px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 5px;
  margin-left: 5px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS13 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<div
  className="IS13 S3"
>
  <div
    className="IS6 S5"
  >
    <div
      className="IS2 S3"
    >
      <div
        className="S3"
      >
        <div
          className="S1"
        >
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div
          className="S3"
        >
          <div
            className="S3"
          >
            <div
              className="IS1 S2"
            >
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            className="S4"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </div>
    </div>
    <div
      className="IS3 S5"
    />
    <div
      className="IS5 S3"
    >
      <div
        className="S3"
      >
        <div
          className="S1"
        >
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div
          className="S3"
        >
          <div
            className="S3"
          >
            <div
              className="IS4 S2"
            >
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            className="S4"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="IS12 S5"
  >
    <div
      className="IS8 S3"
    >
      <div
        className="S3"
      >
        <div
          className="S1"
        >
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div
          className="S3"
        >
          <div
            className="S3"
          >
            <div
              className="IS7 S2"
            >
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            className="S4"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </div>
    </div>
    <div
      className="IS9 S5"
    />
    <div
      className="IS11 S3"
    >
      <div
        className="S3"
      >
        <div
          className="S1"
        >
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </div>
        <div
          className="S3"
        >
          <div
            className="S3"
          >
            <div
              className="IS10 S2"
            >
              LABEL
            </div>
          </div>
          <h3
            aria-level="3"
            className="S4"
            role="heading"
          >
            Venezuela shows how Corbyn’s socialism works
          </h3>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
